Страница события и списка

--- a/source/jade/_layout.jade
+++ b/source/jade/_layout.jade
@@ -16,9 +16,10 @@ body
 
 		div.system-menu
 			a(href="analytics.html") Статья
-			a(href="articles.html") Аналитические статьи 
+			a(href="articles.html") Статьи
 			a(href="docs-item.html") Документ 
 			a(href="docs.html") Документы 
+			a(href="events-item.html") Событие 
 			a(href="events.html") События 
 			a(href="index.html") Главная 
 			a(href="info.html") Информация 
@@ -27,7 +28,7 @@ body
 			a(href="news.html") Новости 
 			a(href="reports.html") Отчеты
 			a(href="requirements.html") Потребности
-			a(href="requirements-comment.html") Потребности c комменатриями
+			a(href="requirements-comment.html") Потребность
 			a(href="story-item.html") История/Новость
 
 	#shikarniy
