--- a/source/jade/_sidebar.jade
+++ b/source/jade/_sidebar.jade
@@ -336,7 +336,7 @@
 							span (2)
 						.toogle -
 					.bcat-con
-						.item
+						.item.active
 							.idate
 								.num 17
 								.day октября
