--- a/site/css/style.css
+++ b/site/css/style.css
@@ -449,7 +449,6 @@ body {
   top: 0;
   width: 400px;
   box-sizing: border-box;
-  padding: 0 30px;
   min-height: 600px;
   height: 100%;
   text-align: left;
@@ -457,7 +456,7 @@ body {
   background-size: cover;
 }
 .sidebar .side-extend .bname {
-  padding: 30px 0 25px 0;
+  padding: 30px 30px 25px 30px;
 }
 .sidebar .side-extend .bname h3 {
   margin: 0;
@@ -479,6 +478,7 @@ body {
 }
 .sidebar .side-extend .bnav {
   height: 80px;
+  padding: 0 30px;
 }
 .sidebar .side-extend .bnav ul {
   margin: 0;
@@ -516,7 +516,7 @@ body {
   background: rgba(248,88,0,0.5);
 }
 .sidebar .side-extend .bcat {
-  padding-bottom: 40px;
+  padding: 0 30px 40px 30px;
 }
 .sidebar .side-extend .bcat.open .bcat-con {
   display: block;
@@ -569,6 +569,7 @@ body {
   display: none;
 }
 .sidebar .side-extend .bcat .bcat-con .item {
+  position: relative;
   padding: 15px 0;
   border-bottom: 1px solid #2e3033;
 }
@@ -598,6 +599,19 @@ body {
 }
 .sidebar .side-extend .bcat .bcat-con .item .iname a:hover {
   color: #ff8c4d;
+}
+.sidebar .side-extend .bcat .bcat-con .item.active:after {
+  content: " ";
+  position: absolute;
+  right: -40px;
+  top: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  background: #fff;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 .topper {
   position: fixed;
@@ -708,6 +722,41 @@ body {
 .topper .user .pic .count a:hover {
   color: rgba(255,255,255,0.7);
 }
+.event-organizers {
+  width: 60%;
+  margin-top: 40px;
+  padding-top: 20px;
+  color: #333;
+  line-height: 20px;
+  padding-right: 40px;
+  border-top: 1px solid #e6e6e6;
+}
+.event-organizers a {
+  color: #f85800;
+}
+.event-organizers .contacts {
+  padding-top: 20px;
+  padding-bottom: 30px;
+  color: #999;
+}
+.event-organizers .contacts span {
+  padding-top: 4px;
+  padding-left: 30px;
+  padding-right: 40px;
+}
+.event-organizers .contacts span.phone {
+  background: url("../img/icons/phone.png") no-repeat;
+}
+.event-organizers .contacts span.email {
+  background: url("../img/icons/email.png") 2px 4px no-repeat;
+}
+.event-organizers .contacts a {
+  color: #999;
+  text-decoration: none;
+}
+.event-organizers .contacts a:hover {
+  color: #f85800;
+}
 .main-page {
   padding: 90px 40px 50px 240px;
 }
@@ -795,7 +844,16 @@ body {
   height: 30px;
 }
 .mar-bot-20 {
+  margin-bottom: 20px;
+}
+.mar-bot-30 {
   margin-bottom: 30px;
+}
+.mar-bot-10 {
+  margin-bottom: 10px;
+}
+.mar-top-20m {
+  margin-top: -15px;
 }
 .imeta:before,
 .box-news-prev .bmeta .right:before,
@@ -1719,6 +1777,10 @@ img.full {
 .box-news .bcon .item .itext p {
   margin-bottom: 10px;
 }
+.box-news_dotted .item {
+  margin-bottom: 30px;
+  border-bottom: 1px dotted #e5e5e5;
+}
 .box-talks .bcon .item {
   padding-left: 25px;
   padding-bottom: 20px;
@@ -2136,6 +2198,7 @@ img.full {
 }
 .box-comments .bcomments .comment .ccon .name {
   padding-bottom: 10px;
+  color: #333;
 }
 .box-comments .bcomments .comment .ccon .name a {
   color: #333;
@@ -2145,6 +2208,16 @@ img.full {
 .box-comments .bcomments .comment .ccon .name .date {
   display: inline-block;
   padding-left: 10px;
+  color: #ccc;
+}
+.box-comments .bcomments .comment .ccon .name .pep {
+  display: inline-block;
+}
+.box-comments .bcomments .comment .ccon .name .pep a {
+  color: #ccc;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: none;
 }
 .box-comments .bcomments .comment .ccon .text {
   font-size: 14px;
@@ -2568,6 +2641,66 @@ img.full {
 .item-cloud-one .icon .imeta .right {
   float: right;
 }
+.box-interest {
+  margin: 0 -21px 0px -21px;
+  background: #fafafa;
+  border: 1px solid #e5e5e5;
+}
+.box-interest .bcon {
+  padding: 0 20px 20px 20px;
+}
+.box-interest .bcon .item-left {
+  display: table-cell;
+  width: 65%;
+  padding-right: 10px;
+  border-right: 1px dotted #e7e7e7;
+}
+.box-interest .bcon .item-left .iprev {
+  display: table-cell;
+}
+.box-interest .bcon .item-left .iprev p.desc {
+  color: #ccc;
+}
+.box-interest .bcon .item-left .item {
+  display: table-cell;
+  padding-left: 20px;
+  vertical-align: top;
+}
+.box-interest .bcon .items-right {
+  display: table-cell;
+  vertical-align: top;
+  padding-left: 10px;
+}
+.box-interest .bcon .items-right .item {
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px dotted #e7e7e7;
+}
+.box-interest .bcon .items-right .item:last-child {
+  border: 0;
+}
+.box-interest .bcon .item .iname {
+  padding-bottom: 5px;
+}
+.box-interest .bcon .item .iname a {
+  color: #333;
+  font-size: 14px;
+  text-decoration: none;
+}
+.box-interest .bcon .item .iname a:hover {
+  color: #f85800;
+}
+.box-interest .bcon .item .itext {
+  padding-bottom: 10px;
+  color: #999;
+}
+.box-interest .bcon .item .imore {
+  padding-bottom: 10px;
+}
+.box-interest .bcon .item .idate {
+  font-size: 11px;
+  color: #ccc;
+}
 .box-text-item {
   padding: 20px;
   border: 1px solid #e5e5e5;
@@ -2590,7 +2723,7 @@ img.full {
   color: #333;
 }
 .box-text-item .bname h1 {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   color: #333;
   font-size: 30px;
   font-family: 'latoblack';
@@ -2683,65 +2816,17 @@ img.full {
 .box-text-item .bmetabot .comments a {
   padding: 9px 30px;
 }
-.box-interest {
-  margin: 0 -21px 0px -21px;
-  background: #fafafa;
-  border: 1px solid #e5e5e5;
-}
-.box-interest .bcon {
-  padding: 0 20px 20px 20px;
-}
-.box-interest .bcon .item-left {
-  display: table-cell;
-  width: 65%;
-  padding-right: 10px;
-  border-right: 1px dotted #e7e7e7;
-}
-.box-interest .bcon .item-left .iprev {
-  display: table-cell;
-}
-.box-interest .bcon .item-left .iprev p.desc {
-  color: #ccc;
-}
-.box-interest .bcon .item-left .item {
-  display: table-cell;
-  padding-left: 20px;
-  vertical-align: top;
-}
-.box-interest .bcon .items-right {
+.event-item .iprev {
   display: table-cell;
   vertical-align: top;
-  padding-left: 10px;
 }
-.box-interest .bcon .items-right .item {
-  margin-bottom: 5px;
-  padding-bottom: 5px;
-  border-bottom: 1px dotted #e7e7e7;
+.event-item .icon {
+  display: table-cell;
+  vertical-align: top;
+  width: 90%;
 }
-.box-interest .bcon .items-right .item:last-child {
-  border: 0;
-}
-.box-interest .bcon .item .iname {
-  padding-bottom: 5px;
-}
-.box-interest .bcon .item .iname a {
-  color: #333;
-  font-size: 14px;
-  text-decoration: none;
-}
-.box-interest .bcon .item .iname a:hover {
-  color: #f85800;
-}
-.box-interest .bcon .item .itext {
-  padding-bottom: 10px;
-  color: #999;
-}
-.box-interest .bcon .item .imore {
-  padding-bottom: 10px;
-}
-.box-interest .bcon .item .idate {
-  font-size: 11px;
-  color: #ccc;
+.event-item .tags {
+  padding-bottom: 15px;
 }
 .item_cloud,
 .item-cloud-one {
@@ -2971,7 +3056,7 @@ img.full {
 .tags .tags-item {
   display: inline-block;
   margin: 0 10px 10px 0;
-  background-color: #fafafa;
+  background-color: #f8f8f8;
   box-shadow: 0 1px 0 rgba(0,0,0,0.1), inset 0 1px 0 #fff;
   border: 1px solid transparent;
   border-radius: 2px;
@@ -3023,22 +3108,29 @@ img.full {
   background-image: linear-gradient(to top, #f5f5f5 0%, #fefefe 100%);
   border: 1px solid rgba(0,0,0,0.1);
 }
-.adsress-date {
-  color: #ccc;
+.address-date {
+  color: #999;
   font-size: 11px;
   line-height: 14px;
 }
-.adsress-date .ad-adsress {
+.address-date .ad-address {
   padding-left: 20px;
   margin-bottom: 10px;
   background: url("../img/icons/map-sm.png") no-repeat;
 }
-.adsress-date .ad-date {
+.address-date .ad-date {
   padding-left: 20px;
   background: url("../img/icons/date-sm.png") 0 1px no-repeat;
 }
-.mar-top-20m {
-  margin-top: -15px;
+.add-to-cal {
+  margin-top: 15px;
+  padding-left: 25px;
+  padding-top: 2px;
+  background: url("../img/icons/cal-sm.png") no-repeat;
+  color: #f85800;
+}
+.add-to-cal a {
+  color: #f85800;
 }
 footer {
   padding-top: 40px;
@@ -3060,7 +3152,7 @@ footer .copy {
   overflow: hidden;
   position: relative;
   height: 630px;
-  margin-right: -30px;
+  padding-right: 0px;
 }
 .mCustomScrollBox {
   position: relative;
@@ -3076,7 +3168,6 @@ footer .copy {
   overflow: hidden;
   width: auto;
   height: auto;
-  margin-right: 30px;
 }
 @media w1500 {
   .mCustomScrollBox .mCSB_container {
