--- a/source/jade/events.jade
+++ b/source/jade/events.jade
@@ -24,7 +24,7 @@ block append content
 			p События на тему строительства промышленных и иных объектов
 		//------------------------------------------------
 		.main-left
-			.box-articles.box-orange.mar-bot-20
+			.box-articles.box-orange.mar-bot-30
 				.item
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
@@ -38,8 +38,8 @@ block append content
 							a(href="#").tags-item
 								span.name Выставки
 								span.count 12
-						.adsress-date
-							.ad-adsress Москва, ул. Сиреневый бульвар, д.4
+						.address-date
+							.ad-address Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -60,8 +60,8 @@ block append content
 							a(href="#").tags-item
 								span.name Круглый стол
 								span.count.empty
-						.adsress-date
-							.ad-adsress Москва, ул. Сиреневый бульвар, д.4
+						.address-date
+							.ad-address Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -78,15 +78,15 @@ block append content
 					.icon
 						.iname
 							a(href="#") Состояние науки российской федерации
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
+						.itext Без описания
 						.imore 
 							a(href="#") Читать полностью
 						.tags
 							a(href="#").tags-item
 								span.name Круглый стол
 								span.count.empty
-						.adsress-date
-							.ad-adsress Москва, ул. Сиреневый бульвар, д.4
+						.address-date
+							.ad-address Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -107,8 +107,8 @@ block append content
 							a(href="#").tags-item
 								span.name Круглый стол
 								span.count.empty
-						.adsress-date
-							.ad-adsress Москва, ул. Сиреневый бульвар, д.4
+						.address-date
+							.ad-address Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -129,8 +129,8 @@ block append content
 							a(href="#").tags-item
 								span.name Мастер-класс
 								span.count 43
-						.adsress-date
-							.ad-adsress Москва, ул. Сиреневый бульвар, д.4
+						.address-date
+							.ad-address Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -151,8 +151,8 @@ block append content
 							a(href="#").tags-item
 								span.name Круглый стол
 								span.count.empty
-						.adsress-date
-							.ad-adsress Москва, ул. Сиреневый бульвар, д.4
+						.address-date
+							.ad-address Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -162,46 +162,49 @@ block append content
 									a(href="#") 225
 		//------------------------------------------`------
 		.main-right
-			.box-sort-docs.box-right
+			.box-news.box-right.box-news_dotted
 				.bname
-					h3 Показать события
+					h3 
+						a(href="#") Похожие события
 				.bcon
-					.dates
-						.legend С Датой проведения
-						.line
-							.td
-								span от
-							.td
-								input(type="text", placeholder="дата от")
-							.td
-								.calendar-widget-pop
-									a(href="#").cal
-						.line
-							.td
-								span до
-							.td
-								input(type="text", placeholder="дата до")
-							.td
-								.calendar-widget-pop
-									a(href="#").cal
-					.checks
-						.legend Тип мероприятия
-						.line
-							input(id="check-val2" type="checkbox" name="radio")
-							label(for="check-val2") Конференция
-						.line
-							input(id="check-val3" type="checkbox" name="radio")
-							label(for="check-val3") Мастер-класс
-					.checks
-						.legend В городе
-						.line
-							input(id="check-val4" type="checkbox" name="radio")
-							label(for="check-val4") Москва
-						.line
-							input(id="check-val5" type="checkbox" name="radio")
-							label(for="check-val5") Пермь
-				.action
-					a(href="#") Показать
+					.item
+						.idate 30 Сентября
+						.iname 
+							a(href="#") Выставка научного оборудования НИИ спорта РГУФКСМиТ
+						.itext 10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования.
+						.tags
+							a(href="#").tags-item
+								span.name Круглый стол
+								span.count.empty
+						.address-date
+							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-date 27, 28 октября - с 14.00<br>29, 30 октября - с 10.00
+					.item
+						.idate 18 Сентября
+						.iname 
+							a(href="#") Ивановский государственный политехнический университет
+						.itext 10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования.
+						.tags
+							a(href="#").tags-item
+								span.name Выставки
+								span.count 45
+						.address-date
+							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-date 27, 28 октября - с 14.00<br>29, 30 октября - с 10.00
+					.item
+						.idate 30 Сентября
+						.iname 
+							a(href="#") Ученые объяснили смертельную 
+						.itext 10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования.
+						.tags
+							a(href="#").tags-item
+								span.name Круглый стол
+								span.count.empty
+						.address-date
+							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-date 27, 28 октября - с 14.00<br>29, 30 октября - с 10.00
+				.ball
+					a(href="#") Все новости
 			//------------------------------------------------
 			.box-support
 				.bcon
