--- a/source/jade/_layout.jade
+++ b/source/jade/_layout.jade
@@ -29,6 +29,8 @@ body
 			a(href="reports.html") Отчеты
 			a(href="requirements.html") Потребности
 			a(href="requirements-comment.html") Потребность
+			a(href="services-item.html") Услуга
+			a(href="services.html") Услуги
 			a(href="story-item.html") История/Новость
 
 	#shikarniy
