--- a/source/styl/common.styl
+++ b/source/styl/common.styl
@@ -97,7 +97,7 @@ body
 ul
 	margin 0 0 15px 0;
 	li
-		margin 0 0 15px 15px; list-style square inside;
+		margin 0 0 15px 15px; list-style disc outside;
 		ul, ol
 			margin 15px 0 10px 0;
 ol
