Список оборудования, оборудование

--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -625,6 +625,9 @@ h1.service-title
 	margin-bottom 20px
 .comments-count
 	text-align right
+.lh-small
+	p 
+		margin-bottom 10px
 
 //	ОСНОВНОЙ СЛАЙДЕР
 // ===============================================
