--- a/source/styl/common.styl
+++ b/source/styl/common.styl
@@ -124,7 +124,7 @@ ul.mrno
 //	ССЫЛКИ
 // ===============================================
 a
-	color #ff8c4d; text-decoration none; anim-all();
+	color #f85800; text-decoration none; anim-all();
 	&:hover
 		text-decoration underline;
 	&.active 
