--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -628,6 +628,19 @@ h1.service-title
 .lh-small
 	p 
 		margin-bottom 10px
+.updade-black
+	display inline-block
+	width 11px
+	height 16px
+	margin 0 0 0 5px
+	vertical-align bottom
+	background url("../img/icons/updade-black.png") 0 center no-repeat
+	&:hover
+		transform rotate(180deg)
+.black-strong
+	strong
+		color #333
+		font-weight 400
 
 //	ОСНОВНОЙ СЛАЙДЕР
 // ===============================================
@@ -1049,6 +1062,21 @@ h1.service-title
 	.item
 		margin-bottom 30px
 		border-bottom 1px dotted #E5E5E5
+.box-news_dotted-sm
+	.item
+		margin-bottom 30px
+		border-bottom 1px dotted #E5E5E5
+		padding-bottom 10px
+		.tags
+			padding-bottom 0
+			margin-right -10px
+	.item:last-child
+		border-bottom none
+		margin-bottom 0		
+		p
+			strong
+				color #333
+				font-weight normal
 // -----------------------------------------------
 .box-talks
 	.bcon
