--- a/source/jade/analytics.jade
+++ b/source/jade/analytics.jade
@@ -4,7 +4,7 @@ extends _layout
 
 //- Загаловок страницы
 block title
-	| - Документ
+	| - Статья
 	
 block styles
 	link(href="css/jquery.remodal.css", rel="stylesheet")
