--- a/source/jade/articles.jade
+++ b/source/jade/articles.jade
@@ -4,7 +4,7 @@ extends _layout
 
 //- Загаловок страницы
 block title
-	| - Документы
+	| - Статьи
 	
 block scripts
 	script(src="js/jquery.supercal.js", type="text/javascript")
