--- a/source/jade/equipments.jade
+++ b/source/jade/equipments.jade
@@ -4,7 +4,7 @@ extends _layout
 
 //- Загаловок страницы
 block title
-	| - Услуги
+	| - Оборудование
 	
 block scripts
 	script(src="js/jquery.supercal.js", type="text/javascript")
@@ -37,7 +37,7 @@ block append content
 							| Пользовательскому рейтингу 
 							span
 						a(href="#") 
-							Названию организации
+							| Названию организации
 							span 
 				.item
 					.iprev
