--- a/source/jade/services.jade
+++ b/source/jade/services.jade
@@ -35,7 +35,7 @@ block append content
 							| Пользовательскому рейтингу 
 							span
 						a(href="#") 
-							Названию организации
+							| Названию организации
 							span 
 				.item
 					.iprev
