--- a/source/jade/_layout.jade
+++ b/source/jade/_layout.jade
@@ -8,9 +8,9 @@ body
 
 	if develop
 		style
-			| .system-menu {position: fixed; width:auto; bottom:0; z-index: 9999; background: #fff; opacity:.3; overflow:hidden; transition:all 0.3s ease-out;}
+			| .system-menu {position: fixed; width:10px; bottom:0; z-index: 9999; background: #fff; opacity:0; overflow:hidden; transition:all 0.3s ease-out;}
 			| .system-menu:hover {width:auto; opacity: 1;}
-			| .system-menu a {display:block; padding:10px 15px; font-size:12px; color: #000;}
+			| .system-menu a {display:block; padding:5px 10px; font-size:12px; color: #000;}
 			| .system-menu a:hover {background:#e6e6e6; text-decoration:none;}
 			| .system-menu p.sep {margin:0; padding:5px 10px; min-height:2px; font-size:12px; border-top: 2px solid #000;}
 
@@ -19,16 +19,20 @@ body
 			a(href="articles.html") Статьи
 			a(href="docs-item.html") Документ 
 			a(href="docs.html") Документы 
+			a(href="equipments-item.html") Оборудование
+			a(href="equipments.html") Оборудования
 			a(href="events-item.html") Событие 
 			a(href="events.html") События 
-			a(href="index.html") Главная 
 			a(href="info.html") Информация 
 			a(href="links.html") Ссылки 
 			a(href="lk.html") ЛК 
+			a(href="main.html") Главная 
 			a(href="news.html") Новости 
 			a(href="reports.html") Отчеты
-			a(href="requirements.html") Потребности
 			a(href="requirements-comment.html") Потребность
+			a(href="requirements.html") Потребности
+			a(href="results.html") Результаты
+			a(href="results-item.html") Результат
 			a(href="services-item.html") Услуга
 			a(href="services.html") Услуги
 			a(href="story-item.html") История/Новость
