--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -1153,14 +1153,11 @@ h1.service-title
 					color #333;
 					&:hover
 						color #ff8c4d;
-	.calendar-wrap
-		background #fff;
-		position relative; 
-		overflow hidden;
-		.calendar			
-			margin 20px;
-			position relative; 
-			overflow hidden;
+.calendar-wrap
+	margin -1px  -1px -1px -1px
+	background #fff;
+	position relative; 
+	overflow hidden;
 // -----------------------------------------------
 .box-support
 	height 270px;
@@ -1483,51 +1480,6 @@ h1.service-title
 		text-align right
 		width 20px
 // -----------------------------------------------
-
-
-//	КАЛЕНДАРЬ	 
-// ===============================================
-.supercal-popup
-	position absolute; left 0px; top 0px; 
-	background #fff; 
-	z-index 10;
-	border 1px solid #ccc;
-	width 200px !important;
-	padding 20px; 
-	overflow hidden;
-.supercal 
-	.supercal-header
-		padding-bottom 15px;
-		text-align center;
-		color #FF8C4D; text-transform uppercase; font-size 14px; latoblack();
-		.btn
-			border none
-		.prev-month
-			float left; 
-			width 7px; height 8px;
-			margin 5px 0 0 20px; 
-			text-indent -9999px; cursor pointer;
-			background url("../img/icons/calendar-prev.jpg") no-repeat;  
-		.next-month
-			float right;
-			width 7px; height 8px;
-			margin 5px 20px 0 0; 
-			text-indent -9999px; cursor pointer; 
-			background url("../img/icons/calendar-next.jpg") no-repeat;
-	.supercal-month
-		th
-			color #333; regular(); 
-		td
-			vertical-align middle; text-align center;
-			padding 5px 5px 4px 5px;
-			cursor pointer; 
-			&:hover
-				color #333;
-				background url("../img/cal-bg-a.png") center center no-repeat; 
-		td.selected
-			color #fff; 
-			background url("../img/cal-bg.png") center center no-repeat; 
-
 
 //	ДОКУМЕНТЫ
 // ===============================================
