Правки: убираем сортировка в левом черном меню

--- a/source/jade/_sidebar.jade
+++ b/source/jade/_sidebar.jade
@@ -20,7 +20,7 @@
 			a(href="#").close.hoverbg
 				.icon
 					.act
-		.bnav
+		//-.bnav
 			ul
 				li
 					a(href="#") За неделю
@@ -173,11 +173,11 @@
 			a(href="#").close.hoverbg
 				.icon
 					.act
-		.bnav
+		//-.bnav
 			ul
-				li.active
-					a(href="#") За неделю
 				li
+					a(href="#") За неделю
+				li.active
 					a(href="#") За месяц
 				li
 					a(href="#") За все время
@@ -326,7 +326,7 @@
 			a(href="#").close.hoverbg
 				.icon
 					.act
-		.bnav
+		//-.bnav
 		.bcon
 			.scroller-box
 				.bcat.open.active
